@@ -88,7 +88,7 @@ public class AponReader extends AponFormat {
 	 * @param openBracket the left bracket character
 	 * @param name the parameter name
 	 * @param parameterValue the parameter value
-	 * @param parameterValueType the parameter value type
+	 * @param parameterValueType the value type of the parameter
 	 * @return the current line number
 	 * @throws IOException an I/O error occurs.
 	 */
@@ -145,7 +145,7 @@ public class AponReader extends AponFormat {
 				} else {
 					if(!addable) {
 						throw new InvalidParameterException(lineNumber, line, trim,
-								"The pre-defined parameters are only allowed. Undefined parameter name: " + name);
+								"Predefined parameters are only allowed. Unallowed parameter name: " + name);
 					}
 					parameterValueType = ParameterValueType.resolveByHint(name);
 					if(parameterValueType != null) {
@@ -181,7 +181,6 @@ public class AponReader extends AponFormat {
 					continue;
 				}
 			}
-
 			if(parameterValueType == null) {
 				if(CURLY_BRACKET_OPEN == cchar) {
 					parameterValueType = ParameterValueType.PARAMETERS;
@@ -194,77 +193,65 @@ public class AponReader extends AponFormat {
 				if(parameterValue == null) {
 					parameterValue = parameters.newParameterValue(name, parameterValueType, (openBracket == SQUARE_BRACKET_OPEN));
 				}
-
 				Parameters parameters2 = parameters.newParameters(parameterValue.getName());
 				addable = parameters2.isAddable();
-				
 				valuelize(parameters2, CURLY_BRACKET_OPEN, null, null, null);
 			} else if(parameterValueType == ParameterValueType.TEXT) {
 				if(parameterValue == null) {
 					parameterValue = parameters.newParameterValue(name, parameterValueType, (openBracket == SQUARE_BRACKET_OPEN));
 				}
-
 				StringBuilder sb = new StringBuilder();
 				valuelizeText(sb);
 				parameterValue.putValue(sb.toString());
 			} else {
 				if(vlen == 0) {
 					value = null;
-					
-					if(parameterValueType == null)
+					if(parameterValueType == null) {
 						parameterValueType = ParameterValueType.STRING;
-				} else {
-					if(value.charAt(0) == DOUBLE_QUOTE_CHAR) {
+					}
+				} else if(parameterValueType == null) {
+					if(NULL.equals(value)) {
+						value = null;
+						parameterValueType = ParameterValueType.STRING;
+					} else if(TRUE.equals(value) || FALSE.equals(value)) {
+						parameterValueType = ParameterValueType.BOOLEAN;
+					} else if(value.charAt(0) == DOUBLE_QUOTE_CHAR) {
 						if(vlen == 1 || value.charAt(vlen - 1) != DOUBLE_QUOTE_CHAR) {
 							throw new InvalidParameterException(lineNumber, line, trim,
-									"Unclosed quotation mark after the character string " + value);						
+									"Unclosed quotation mark after the character string " + value);
 						}
-						value = value.substring(1, vlen - 1);
-						if(parameterValueType == null) {
-							parameterValueType = ParameterValueType.STRING;
-						}
+						parameterValueType = ParameterValueType.STRING;
 					} else if(value.charAt(0) == SINGLE_QUOTE_CHAR) {
 						if(vlen == 1 || value.charAt(vlen - 1) != SINGLE_QUOTE_CHAR) {
 							throw new InvalidParameterException(lineNumber, line, trim,
-									"Unclosed quotation mark after the character string " + value);						
+									"Unclosed quotation mark after the character string " + value);
 						}
-						value = value.substring(1, vlen - 1);
-						if(parameterValueType == null) {
-							parameterValueType = ParameterValueType.STRING;
-						}
-					} else if(parameterValueType == null) {
-						if(NULL.equals(value)) {
-							value = null;
-						} else if(TRUE.equals(value) || FALSE.equals(value)) {
-							parameterValueType = ParameterValueType.BOOLEAN;
-						} else {
+						parameterValueType = ParameterValueType.STRING;
+					} else {
+						try {
+							Integer.parseInt(value);
+							parameterValueType = ParameterValueType.INT;
+						} catch(NumberFormatException e1) {
 							try {
-								Integer.parseInt(value);
-								parameterValueType = ParameterValueType.INT;
-							} catch(NumberFormatException e1) {
+								Long.parseLong(value);
+								parameterValueType = ParameterValueType.LONG;
+							} catch(NumberFormatException e2) {
 								try {
-									Long.parseLong(value);
-									parameterValueType = ParameterValueType.LONG;
-								} catch(NumberFormatException e2) {
+									Float.parseFloat(value);
+									parameterValueType = ParameterValueType.FLOAT;
+								} catch(NumberFormatException e3) {
 									try {
-										Float.parseFloat(value);
-										parameterValueType = ParameterValueType.FLOAT;
-									} catch(NumberFormatException e3) {
-										try {
-											Double.parseDouble(value);
-											parameterValueType = ParameterValueType.DOUBLE;
-										} catch(NumberFormatException e4) {
-											parameterValueType = ParameterValueType.STRING;
-											//throw new InvalidParameterException(lineNumber, line, trim,
-											//		"Unknown value type. Strings must be enclosed between double quotation marks.");
-										}
+										Double.parseDouble(value);
+										parameterValueType = ParameterValueType.DOUBLE;
+									} catch(NumberFormatException e4) {
+										parameterValueType = ParameterValueType.STRING;
 									}
 								}
 							}
 						}
 					}
 				}
-				
+
 				if(parameterValue == null) {
 					parameterValue = parameters.newParameterValue(name, parameterValueType, (openBracket == SQUARE_BRACKET_OPEN));
 				} else {
@@ -275,19 +262,26 @@ public class AponReader extends AponFormat {
 								lineNumber, line, trim, parameterValue, parameterValue.getParameterValueType());
 					}
 				}
-				
-				if(parameterValueType == ParameterValueType.STRING) {
-					parameterValue.putValue(unescape(value, lineNumber, line, trim));
-				} else if(parameterValueType == ParameterValueType.INT) {
-					parameterValue.putValue(new Integer(value));
-				} else if(parameterValueType == ParameterValueType.LONG) {
-					parameterValue.putValue(new Long(value));
-				} else if(parameterValueType == ParameterValueType.FLOAT) {
-					parameterValue.putValue(new Float(value));
-				} else if(parameterValueType == ParameterValueType.DOUBLE) {
-					parameterValue.putValue(new Double(value));
-				} else if(parameterValueType == ParameterValueType.BOOLEAN) {
-					parameterValue.putValue(Boolean.valueOf(value));
+
+				if(value == null) {
+					parameterValue.putValue(null);
+				} else {
+					if(parameterValueType == ParameterValueType.STRING) {
+						if(value.charAt(0) == DOUBLE_QUOTE_CHAR || value.charAt(0) == SINGLE_QUOTE_CHAR) {
+							value = unescape(value.substring(1, vlen - 1), lineNumber, line, trim);
+						}
+						parameterValue.putValue(value);
+					} else if(parameterValueType == ParameterValueType.BOOLEAN) {
+						parameterValue.putValue(Boolean.valueOf(value));
+					} else if(parameterValueType == ParameterValueType.INT) {
+						parameterValue.putValue(new Integer(value));
+					} else if(parameterValueType == ParameterValueType.LONG) {
+						parameterValue.putValue(new Long(value));
+					} else if(parameterValueType == ParameterValueType.FLOAT) {
+						parameterValue.putValue(new Float(value));
+					} else if(parameterValueType == ParameterValueType.DOUBLE) {
+						parameterValue.putValue(new Double(value));
+					}
 				}
 			}
 			
